<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterUserName"
        android:textSize="20sp" />
    <EditText android:id="@+id/EnterUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:layout_marginBottom="10dp" />
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterEmailAdd"
        android:textSize="20sp" />
    <EditText android:id="@+id/EnterEmailAdd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:layout_marginBottom="10dp" />
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterPassword"
        android:textSize="20sp" />
    <EditText android:id="@+id/EnterPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text=""
        android:layout_marginBottom="10dp" />
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ReEnterPassword"
        android:textSize="20sp" />
    <EditText android:id="@+id/ReEnterPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text=""
        android:layout_marginBottom="10dp" />
    <Button android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#000000"
        android:backgroundTint="#cac5bf"
        android:text="@string/register"/>


</LinearLayout>
