<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <ImageView android:id="@+id/image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@mipmap/ic_launcher" />
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textSize="20sp" />
    <EditText android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:layout_marginBottom="10dp" />
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="20sp" />
    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text=""
        android:layout_marginBottom="10dp" />
    <CheckBox android:id="@+id/RemeberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemeberMe"
        android:onClick="onCheckboxClicked"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <Button android:id="@+id/EnterRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:backgroundTint="#cac5bf"
            android:text="@string/register"/>
        <Button android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_toRightOf="@id/EnterRegister"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:backgroundTint="#2828d4"
            android:text="@string/Login"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:textColor="#000000"
            android:backgroundTint="#cac5bf"
            android:text="@string/forgetPassword"/>
        <Button android:id="@+id/forgetUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/forgetPassword"
            android:textAlignment="center"
            android:textColor="#000000"
            android:backgroundTint="#cac5bf"
            android:text="@string/forgetUserName"/>
    </RelativeLayout>
</LinearLayout>
