<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop = "50dp">
    <ImageView android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:src="@drawable/logo" />
    <Button android:id="@+id/makeSell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:backgroundTint="#eb8f0f"
        android:text="@string/makeSell"/>
    <Button android:id="@+id/editCatalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:backgroundTint="#eb8f0f"
        android:text="@string/editCatalog"/>
    <Button android:id="@+id/makeReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:backgroundTint="#eb8f0f"
        android:text="@string/makeReport"/>
    <Button android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:backgroundTint="#eb8f0f"
        android:text="@string/setting"/>

</LinearLayout>
