<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shop_kart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.shopkeeper.Activity.shopKart">
    <ListView
        android:id="@+id/SellList2"
        android:layout_width="fill_parent"
        android:layout_height="320dp">
    </ListView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="#FF909090" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/TotalPrice"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/FinalPrice2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/currency"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:text="@string/ttc"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/FinalPriceHt2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/currency"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:text="@string/ht"
            android:textSize="20sp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"/>
</LinearLayout>
